# mcp-router

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  task.md
.github/workflows/: ci.yml
api/: __init__.py
api/http/: dashboard.py  dependencies.py  mcp.py  ops.py
api/http/static/: dashboard.html  index.html
api/http/static/css/: base.css  components.css  layout.css  views.css
api/http/static/js/: api.js  components.js  state.js
api/http/static/js/views/: import.js  (+2 more)
api/http/v1/: __init__.py  router.py
api/http/v1/routes/: control_plane.py  health.py  setup.py
cmd/: server.py
deploy/: Dockerfile  docker-compose.yml
deploy/k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  secret.example.yaml  service.yaml  serviceaccount.yaml
deploy/k8s/overlays/staging/: configmap-patch.yaml  deployment-patch.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy-postgres.yaml  networkpolicy-redis.yaml  networkpolicy-router.yaml  postgres-deployment.yaml  postgres-service.yaml  postgres-staging-secrets.example.yaml  redis-deployment.yaml
docs/: architecture.md  ci-cd.md  roadmap.md
docs/runbooks/: staging.md
docs/superpowers/plans/: 2026-04-23-dashboard-phase1-neobrutalist-refactor.md  2026-04-23-dashboard-phase2-import-control-plane.md  2026-04-23-dashboard-phase3-polish-and-state-system.md
examples/mcp/: initialize.json
examples/upstreams/: http_server.py  stdio_server.py
internal/: __init__.py  application.py  audit.py  auth.py  config.py  container.py  context.py  health.py  logging.py  metrics.py  policy.py  redaction.py  registry.py  resilience.py  schema.py  session_manager.py  setup.py  state_store.py  tracing.py  traffic_control.py  upstream.py
internal/mcp/: __init__.py  errors.py  models.py  service.py
tests/: conftest.py  test_control_plane.py  test_health.py  test_mcp.py  test_security.py  test_setup.py
tests/fixtures/: demo_stdio_upstream.py
